# fast-api-sample

./: README.md  pyproject.toml
mylib/: pyproject.toml
mylib/mylib/: export_pkl.py  myaccessor.py  mydata.py
src/app/: main.py  mydata.pkl
src/app/controllers/: hoge_v1.py
src/app/entities/: onigiri.py
src/app/usecases/: i_call_myaccessor.py
src/app/usecases/impl/: call_myaccessor.py
tests/app/controllers/: test_hoge_v1.py
tests/app/usecases/impl/: test_call_myaccessor.py
