[tool.poetry]
name = "fast-api-sample"
version = "0.1.0"
description = ""
authors = ["sattn <info@sattn-jp.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
injector = "^0.20.1"
pandas = "^1.5.3"
pandera = "^0.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
